agents and tasks are added for interview questions

--- a/config/agents.yaml
+++ b/config/agents.yaml
@@ -1,3 +1,56 @@
+parser_agent:
+  role: >
+    Resume Parsing Specialist
+  goal: >
+    Extract clean, structured text from a resume suitable for ATS optimization.
+  backstory: >
+    You efficiently clean resume text by removing artifacts and normalizing formatting. 
+    Focus on speed and accuracy - preserve all important content while removing noise.
+  llm: gpt-4o-mini
+  temperature: 0.0
+  max_iter: 1
+  max_execution_time: 120
+
+ats_writer_agent:
+  role: >
+    ATS Optimization Writer
+  goal: >
+    Create a high-scoring ATS-optimized resume that matches job requirements perfectly.
+  backstory: >
+    You are an expert at transforming resumes into ATS-friendly formats that score 80+ points. 
+    You strategically place keywords, use strong action verbs, and quantify all achievements. 
+    You work quickly and deliver results that pass ATS systems.
+  llm: gpt-4o-mini
+  temperature: 0.3
+  max_iter: 1
+  max_execution_time: 120
+
+evaluator_agent:
+  role: >
+    ATS Evaluator
+  goal: >
+    Provide accurate ATS scores and actionable improvement recommendations.
+  backstory: >
+    You are a precise ATS scoring expert who quickly identifies gaps and provides specific, 
+    actionable recommendations. You focus on keyword density, section structure, and measurable achievements.
+  llm: gpt-4o-mini
+  temperature: 0.0
+  max_iter: 1
+  max_execution_time: 120
+
+refiner_agent:
+  role: >
+    Bullet Point Refiner
+  goal: >
+    Transform bullet points into high-impact, ATS-optimized statements with strong metrics.
+  backstory: >
+    You excel at creating powerful bullet points that combine action verbs, specific achievements, and quantified results. 
+    You work efficiently to maximize impact.
+  llm: gpt-4o-mini
+  temperature: 0.2
+  max_iter: 1
+  max_execution_time: 120
+  
 general_question_agent:
   role: >
     Interview Assistant
